--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,26 @@
 <!doctype html>
-    <html lang="en">
-        <head>
-            <meta charset="utf-8" />
-            <title></title>
+  <html lang="en">
+    <head>
+      <meta charset="utf-8" />
+      <title></title>
 
-            <link rel="stylesheet" type="text/css" href="styles/main.css" />
-            <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-            <!--[if IE]>
-            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <![endif]-->
+      <link rel="stylesheet" type="text/css" href="styles/main.css" />
+      <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+      <!--[if IE]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <![endif]-->
 
 
-        </head>
-        <body ng-app="repoFinder">
-            <div class="container" ng-view=""></div>
+    </head>
+    <body ng-app="repoFinder">
+      <div ng-view=""></div>
 
-            <!--Dependencies-->
-            <script src="./bower_components/angular/angular.min.js" type="text/javascript"></script>
-            <script src="./bower_components/angular-route/angular-route.js" type="text/javascript"></script>
+      <!--Dependencies-->
+      <script src="./bower_components/angular/angular.min.js" type="text/javascript"></script>
+      <script src="./bower_components/angular-route/angular-route.js" type="text/javascript"></script>
 
-            <!--scripts-->
-            <script src="./scripts/app.js" type="text/javascript"></script>
-        </body>
-    </html>
+      <!--scripts-->
+      <script src="./scripts/app.js" type="text/javascript"></script>
+      <script src="./scripts/controllers/mainCtrl.js" type="text/javascript"></script>
+    </body>
+  </html>
