--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,9 @@
       <title></title>
 
       <link rel="stylesheet" type="text/css" href="styles/main.css" />
+      <link rel="stylesheet" type="text/css" href="styles/repoInfo.css" />
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+      <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!--[if IE]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <![endif]-->
@@ -21,6 +23,7 @@
 
       <!--scripts-->
       <script src="./scripts/app.js" type="text/javascript"></script>
+      <script src="./scripts/services/searchService.js" type="text/javascript"></script>
       <script src="./scripts/controllers/mainCtrl.js" type="text/javascript"></script>
     </body>
   </html>
